<resources>
    <string name="app_name">E-ngkringan</string>
    <string name="date">02-11-2022</string>
    <string name="desc">Cari Makananmu di sini</string>
    <string name="hint_search">Cari Angkringan</string>
    <string name="nama_angkringan">Nama Angkringan</string>
    <string name="address">Jln.Tegal</string>
    <string name="jumlah_kursi">12</string>
    <string name="desc_total_table">Kursi Tersedia</string>
    <string name="kursi">Kursi</string>
    <string name="menu">Menu</string>
    <string name="booking">Booking</string>
    <string name="daftar_menu">Daftar Menu</string>
</resources>