<?xml version="1.0" encoding="utf-8"?><androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="100dp"    android:layout_marginBottom="8dp"    android:elevation="20dp"    app:cardCornerRadius="10dp">    <androidx.constraintlayout.widget.ConstraintLayout        android:layout_width="match_parent"        android:layout_height="wrap_content">        <ImageView            android:id="@+id/imageView"            android:layout_width="100dp"            android:layout_height="100dp"            android:layout_marginStart="8dp"            android:src="@drawable/sample"            app:layout_constraintBottom_toBottomOf="parent"            app:layout_constraintStart_toStartOf="parent"            app:layout_constraintTop_toTopOf="parent" />        <TextView            android:id="@+id/tv_name_angkringan"            android:layout_width="0dp"            android:layout_height="wrap_content"            android:layout_marginStart="16dp"            android:layout_marginTop="8dp"            android:layout_marginEnd="8dp"            android:fontFamily="@font/poppins"            android:maxLines="2"            android:text="@string/nama_angkringan"            android:textColor="@color/color4"            android:textSize="14sp"            android:textStyle="bold"            app:layout_constraintEnd_toEndOf="parent"            app:layout_constraintStart_toEndOf="@+id/imageView"            app:layout_constraintTop_toTopOf="@+id/imageView" />        <TextView            android:id="@+id/tv_address"            android:layout_width="0dp"            android:layout_height="wrap_content"            android:fontFamily="@font/poppins"            android:text="@string/address"            android:textColor="@color/color4"            android:textSize="10sp"            app:layout_constraintEnd_toEndOf="@+id/tv_name_angkringan"            app:layout_constraintStart_toStartOf="@+id/tv_name_angkringan"            app:layout_constraintTop_toBottomOf="@+id/tv_name_angkringan" />        <TextView            android:id="@+id/tv_jumlah_kursi"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_marginTop="4dp"            android:layout_marginBottom="10dp"            android:text="@string/jumlah_kursi"            android:textColor="@color/color2"            android:textSize="12sp"            app:layout_constraintStart_toStartOf="@+id/tv_address"            app:layout_constraintTop_toBottomOf="@+id/tv_address" />        <TextView            android:id="@+id/tv_kursi"            android:layout_width="0dp"            android:layout_height="wrap_content"            android:layout_marginStart="8dp"            android:layout_marginTop="4dp"            android:layout_marginBottom="10dp"            android:text="@string/desc_total_table"            android:textColor="@color/color2"            android:textSize="12sp"            app:layout_constraintEnd_toEndOf="@+id/tv_address"            app:layout_constraintStart_toEndOf="@+id/tv_jumlah_kursi"            app:layout_constraintTop_toBottomOf="@+id/tv_address" />    </androidx.constraintlayout.widget.ConstraintLayout></androidx.cardview.widget.CardView>