<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color5"
    tools:context=".detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_angkringan_detail"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_angkringan_detail" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/iv_angkringan_detail">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_name_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/nama_angkringan"
                    android:textColor="@color/color4"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_location"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_location"
                    app:layout_constraintStart_toStartOf="@+id/tv_name_detail"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name_detail" />

                <TextView
                    android:id="@+id/tv_address_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/address"
                    android:textColor="@color/color4"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_location"
                    app:layout_constraintStart_toEndOf="@+id/iv_location"
                    app:layout_constraintTop_toTopOf="@+id/iv_location" />


                <TextView
                    android:id="@+id/tv_descc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/desc"
                    android:textColor="@color/color4"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_address_detail" />

                <ImageView
                    android:id="@+id/iv_table"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/a2"
                    app:layout_constraintStart_toStartOf="@+id/iv_location"
                    app:layout_constraintTop_toBottomOf="@+id/tv_descc" />

                <ImageView
                    android:id="@+id/iv_open"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:src="@drawable/a1"
                    app:layout_constraintStart_toEndOf="@+id/tv_table"
                    app:layout_constraintTop_toTopOf="@+id/iv_table" />

                <ImageView
                    android:id="@+id/iv_makanan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/a3"
                    app:layout_constraintStart_toStartOf="@+id/iv_table"
                    app:layout_constraintTop_toBottomOf="@+id/iv_table" />

                <TextView
                    android:id="@+id/tv_total_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/poppins"
                    android:text="3"
                    android:textColor="@color/color4"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/iv_makanan"
                    app:layout_constraintTop_toTopOf="@+id/iv_makanan" />

                <TextView
                    android:id="@+id/tv_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/poppins"
                    android:text="Menu"
                    android:textStyle="bold"
                    android:textColor="@color/color4"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@+id/tv_total_menu"
                    app:layout_constraintTop_toTopOf="@+id/tv_total_menu" />

                <TextView
                    android:id="@+id/menu_tersedia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="Menu Tersedia"
                    android:textColor="@color/color4"
                    android:textSize="10sp"
                    app:layout_constraintStart_toStartOf="@+id/tv_total_menu"
                    app:layout_constraintTop_toBottomOf="@+id/tv_menu" />

                <ImageView
                    android:id="@+id/iv_jam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/a4"
                    app:layout_constraintStart_toStartOf="@+id/iv_open"
                    app:layout_constraintTop_toTopOf="@+id/iv_makanan" />

                <TextView
                    android:id="@+id/tv_jam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/poppins"
                    android:text="12.00 - 24.00"
                    android:textColor="@color/color4"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/iv_jam"
                    app:layout_constraintTop_toTopOf="@+id/iv_jam" />

                <TextView
                    android:id="@+id/tv_jam_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="Jam Operasional"
                    android:textColor="@color/color4"
                    android:textSize="10sp"
                    app:layout_constraintStart_toStartOf="@+id/tv_jam"
                    app:layout_constraintTop_toBottomOf="@+id/tv_jam" />

                <TextView
                    android:id="@+id/tv_total_table_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/jumlah_kursi"
                    android:textColor="@color/color4"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/iv_table"
                    app:layout_constraintTop_toTopOf="@+id/iv_table" />

                <TextView
                    android:id="@+id/tv_table"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/kursi"
                    android:textColor="@color/color4"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/tv_total_table_detail"
                    app:layout_constraintTop_toTopOf="@+id/tv_total_table_detail" />

                <TextView
                    android:id="@+id/tv_desc_table"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/desc_total_table"
                    android:textColor="@color/color4"
                    android:textSize="10sp"
                    app:layout_constraintStart_toStartOf="@+id/tv_total_table_detail"
                    app:layout_constraintTop_toBottomOf="@+id/tv_table" />

                <Space
                    android:id="@+id/space"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_open"
                    app:layout_constraintEnd_toStartOf="@+id/iv_open"
                    app:layout_constraintStart_toEndOf="@+id/tv_table"
                    app:layout_constraintTop_toTopOf="@+id/iv_open"
                    app:layout_constraintVertical_bias="0.4" />

                <TextView
                    android:id="@+id/tv_pay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/poppins"
                    android:text="8 Payment"
                    android:textColor="@color/color4"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/iv_open"
                    app:layout_constraintTop_toTopOf="@+id/iv_open" />

                <TextView
                    android:id="@+id/tv_pay_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="Metode Pembayaran"
                    android:textColor="@color/color4"
                    android:textSize="10sp"
                    app:layout_constraintStart_toStartOf="@+id/tv_pay"
                    app:layout_constraintTop_toBottomOf="@+id/tv_pay" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>


        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:columnCount="2"
            android:rowCount="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:elevation="20dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_desc"
                tools:layout_editor_absoluteX="152dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginTop="32dp"
                        android:src="@drawable/ic_menu"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/menu"
                        android:textColor="@color/color4"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/imageView2"
                        app:layout_constraintStart_toStartOf="@+id/imageView2"
                        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_booking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="10dp"
                android:elevation="20dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_desc"
                tools:layout_editor_absoluteX="152dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginTop="32dp"
                        android:src="@drawable/ic_booking"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/booking"
                        android:textColor="@color/color4"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/imageView3"
                        app:layout_constraintStart_toStartOf="@+id/imageView3"
                        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </GridLayout>

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/iv_angkringan_detail" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>